# Retina-Damage-Prediction

./: Eye_disease_Prediction.ipynb  Pipfile  README.md  main.py  pyproject.toml  requirements.txt  sample_app.py
app/: main.py
app/templates/: predict.html
templates/: predict.html
