[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "gracefulkinddevelopers"
version = "0.1.0"
[tool.poetry.dependencies]
Keras = "^2.3"
flask = "^1.1"
numpy = "^1.18"
python = "^3.7"
scikit-image = "^0.16.2"
opencv-python = "^4.2"
[tool.poetry.dev-dependencies]
